# putzplan

./: LICENSE  Putzplan.cabal  README.md  putzplan.cabal
src/: Main.hs  Putzplan.hs
