name:                Putzplan
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/mtesseract/Putzplan#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Schulte
maintainer:          mtesseract@silverratio.net
copyright:           Moritz Schulte
category:            value
build-type:          Simple
cabal-version:       >=1.10

Library
  hs-source-dirs:    src
  ghc-options:       -Wall
  Build-Depends:     base >= 4.7 && < 5
  Exposed-modules:   Putzplan
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5
                   , containers >= 0.5.6.2

executable Putzplan
  hs-source-dirs:    src
  main-is:           Main.hs
  ghc-options:       -Wall
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5
                   , containers >= 0.5.6.2
  other-modules:     Putzplan
